Creating new file Idummy.h, where the CSwrapper-functions should reside.
Also startVM started to work. Alert box with wrong text thought.

--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
@@ -261,6 +261,7 @@
     <ClInclude Include="..\..\..\..\..\src\zlib\zconf.in.h" />
     <ClInclude Include="..\..\..\..\..\src\zlib\zlib.h" />
     <ClInclude Include="..\..\..\..\..\src\zlib\zutil.h" />
+    <ClInclude Include="Idummy.h" />
     <ClInclude Include="PhoneDirect3DXamlAppComponent.h" />
     <ClInclude Include="DirectXHelper.h" />
     <ClInclude Include="Direct3DBase.h" />
