--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj.filters
@@ -903,6 +903,7 @@
     <ClInclude Include="..\..\..\..\..\src\jpeg\jversion.h">
       <Filter>TCVM\jpeg\headers</Filter>
     </ClInclude>
+    <ClInclude Include="Idummy.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="TCVM">
