Fixed typo in linux makefile

--- a/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
+++ b/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
@@ -149,7 +149,7 @@ NM_LANG_FILES =                               \
 	$(sourcedir)/nm/lang/StringBuffer.c        \
 	$(sourcedir)/nm/lang/Thread.c              \
 	$(sourcedir)/nm/lang/Throwable.c           \
-	$(sourcedir)/nm/lang/Reflecion.c
+	$(sourcedir)/nm/lang/Reflection.c
 
 libnmlang_la_SOURCES = ${NM_LANG_FILES}
 
