attempting to fix sqlite build for linux

--- a/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
+++ b/TotalCrossVM/builders/gcc-posix/tcvm/Makefile.am
@@ -32,7 +32,7 @@ if TESTSUITE
 AM_CFLAGS += -DENABLE_TEST_SUITE
 endif
 
-SQLITE_CFLAGS_EXTRA = -I$(sourcedir)/sqlite
+SQLITE_CFLAGS_EXTRA = -I$(sourcedir)/sqlite -D_GNU_SOURCE
 
 AM_CFLAGS += $(SQLITE_CFLAGS_EXTRA)
 
