renamed Idummy to CSwrapper

--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj.filters
@@ -888,8 +888,8 @@
     <ClInclude Include="..\..\..\..\..\src\dx\Direct3DBase.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\Direct3DContentProvider.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\DirectXHelper.h" />
-    <ClInclude Include="..\..\..\..\..\src\dx\Idummy.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\PhoneDirect3DXamlAppComponent.h" />
+    <ClInclude Include="..\..\..\..\..\src\dx\cswrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="TCVM">
