--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlAppComponent/PhoneDirect3DXamlAppComponent.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="..\..\..\..\..\src\dx\Direct3DBase.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\Direct3DContentProvider.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\DirectXHelper.h" />
-    <ClInclude Include="..\..\..\..\..\src\dx\Idummy.h" />
+    <ClInclude Include="..\..\..\..\..\src\dx\cswrapper.h" />
     <ClInclude Include="..\..\..\..\..\src\dx\PhoneDirect3DXamlAppComponent.h" />
     <ClInclude Include="..\..\..\..\..\src\event\wp8\specialkeys_c.h" />
     <ClInclude Include="..\..\..\..\..\src\init\demo.h" />
